# rapid7-mcp

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  REPOSITORY_HARDENING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  wiki-publish.yml
docs/wiki/: Demo-Mode-Scenarios.md  Getting-Started.md  Home.md  Prompt-Patterns.md  Publishing.md  Tool-Catalog---InsightIDR.md  Tool-Catalog---InsightVM.md  Tool-Catalog---Metasploit-Pro.md  Troubleshooting-and-FAQ.md  Use-Case-Playbooks.md  _Sidebar.md
rapid7_mcp/: __init__.py  client.py  config.py  main.py  models.py
rapid7_mcp/routers/: asset_groups.py  assets.py  idr.py  metasploit.py  remediation.py  reports.py  scans.py  sites.py  vulnerabilities.py
scripts/: publish_wiki.sh
tests/: conftest.py  test_asset_groups.py  test_assets.py  test_idr.py  test_metasploit.py  test_remediation.py  test_reports.py  test_scans.py  test_sites.py  test_vulnerabilities.py
tests/fixtures/: asset.json  asset_group.json  asset_groups.json  asset_tags.json  asset_vulnerabilities.json  assets.json  indicators.json  investigation.json  investigations.json  log_search_results.json  loot.json  msp_tasks.json  remediation_project.json  remediation_projects.json  report.json  report_generate.json  reports.json  scan.json  scans.json  sessions.json  site.json  sites.json  vulnerabilities.json  vulnerability.json  workspace.json  workspaces.json
